# Profilely

./: .gitignore  README.md  main.py  pyproject.toml  run_script.py  settings.py
app/config/: database.py
app/repository/: user_repository.py
app/service/: user_service.py
templates/: change_password.html  forgot_password_template.html  verify_email_template.html
